force-app/main/default/objects/CurrencyExchangeRate__c/fields/Base_Currency__c.field-meta.xml
<CustomField>
    <fullName>Base_Currency__c</fullName>
    <label>Base Currency</label>
    <length>6</length>
    <type>Text</type>
</CustomField>