force-app/main/default/objects/CurrencyExchangeRate__c/fields/BCH__c.field-meta.xml
<CustomField>
    <fullName>BCH__c</fullName>
    <label>BCH</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>