force-app/main/default/objects/CurrencyExchangeRate__c/fields/BTC__c.field-meta.xml
<CustomField>
    <fullName>BTC__c</fullName>
    <label>BTC</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>