force-app/main/default/objects/CurrencyExchangeRate__c/fields/ETH__c.field-meta.xml
<CustomField>
    <fullName>ETH__c</fullName>
    <label>ETH</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>