force-app/main/default/objects/CurrencyExchangeRate__c/fields/INR__c.field-meta.xml
<CustomField>
    <fullName>INR__c</fullName>
    <label>INR</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>