force-app/main/default/objects/CurrencyExchangeRate__c/fields/USD__c.field-meta.xml
<CustomField>
    <fullName>USD__c</fullName>
    <label>USD</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>