force-app/main/default/objects/CurrencyExchangeRate__c/fields/XRP__c.field-meta.xml
<CustomField>
    <fullName>XRP__c</fullName>
    <label>XRP</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>